--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,40 @@
-flask
-fpdf
-arabic-reshaper
-python-bidi
-pillow
+arabic-reshaper==3.0.0
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+certifi==2024.6.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+defusedxml==0.7.1
+Flask==3.0.3
+fonttools==4.53.0
+fpdf==1.7.2
+fpdf2==2.7.9
+h11==0.14.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+outcome==1.3.0.post0
+pillow==10.3.0
+PySocks==1.7.1
+python-bidi==0.4.2
+reportlab==4.2.0
+requests==2.32.3
+selenium==4.21.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+tqdm==4.66.4
+trio==0.25.1
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+urllib3==2.2.1
+webencodings==0.5.1
+Werkzeug==3.0.3
+wsproto==1.2.0
+
